<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="341dp"
        android:layout_height="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_val1"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_val2"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_result"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_suma"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="sumar"
                    android:text="@string/btn_suma" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent"></Space>

                <Button
                    android:id="@+id/btn_resta"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:onClick="restar"
                    android:text="@string/btn_resta" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_mult"
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="multiplicar"
                    android:text="@string/btn_mult" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent"></Space>

                <Button
                    android:id="@+id/button15"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="dividir"
                    android:text="@string/btn_div" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_resultado"
                android:layout_width="315dp"
                android:layout_height="match_parent"
                android:onClick="borrar"
                android:text="@string/btn_borrar" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>